--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -64,7 +64,7 @@
                 <div class="max-w-sm w-full lg:max-w-full lg:flex shadow-gray-600 shadow-lg">
                     <div class="lg:h-auto lg:w-48 flex-none border-gray-400 lg:border-l lg:border-t lg:border-b lg:border-r lg:border-gray-400 bg-white text-center ">
                       <img
-                          src="<%= user.uploadedFile ? '/uploads/' + user.uploadedFile : '/images/defaultpfp.jpg' %>"
+                          src="<%= user.uploadedFile ? '/uploads/' + user.uploadedFile : 'https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg' %>"
                           class="h-full object-none object-center shaowd-lg rounded-l lg:rounded-l lg:rounded-t"
                       />
                     </div>
