--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -11,11 +11,11 @@
       <div class="flex flex-row justify-center h-96 w-full mb-12 overflow-hidden bg-cover object-contain">
         <img
           src="https://cdn.discordapp.com/attachments/1280355262976360490/1290509366637756507/istockphoto-1185438660-612x612.jpg?ex=66fcb801&is=66fb6681&hm=b7728186d5356df1903fd90ab33b60966585c1c8688c95ae979f6379e982ca30&"
-          class="static z-0 w-full backdrop-opacity-10"
+          class="static z-0 w-full brightness-50"
         />
         <!--title text wrapper-->
         <div class="absolute inset-0 flex items-center justify-center z-10 ">
-          <h1 class="text-7xl font-bold mb-6 shadow-gray-600 drod-shadow-xl">Recommended Dormies</h1>
+          <h1 class="text-7xl font-bold mb-6 text-white" style="text-shadow: 1px 1px 12px #000000;">Recommended Dormies</h1>
         </div>
       </div>
     </header>
